# vsu_web

./: .gitignore  app.py  pyproject.toml  utils.py
ambientes/: DIM_bosque_MB.sbn  DIM_bosque_MB.sbx  DIM_bosque_MB.shp  DIM_bosque_MB.shp.xml  DIM_bosque_MB.shx  DIM_humedal_MB.sbn  DIM_humedal_MB.sbx  DIM_humedal_MB.shp  DIM_humedal_MB.shp.xml  DIM_humedal_MB.shx  DIM_pastizal_MB.dbf  DIM_pastizal_MB.sbn  DIM_pastizal_MB.sbx  DIM_pastizal_MB.shp  DIM_pastizal_MB.shp.xml  DIM_pastizal_MB.shx
dimensiones/: DIM_filtradoH2O_2_MB.dbf  DIM_filtradoH2O_2_MB.sbn  DIM_filtradoH2O_2_MB.sbx  DIM_filtradoH2O_2_MB.shp  DIM_filtradoH2O_2_MB.shp.xml  DIM_filtradoH2O_2_MB.shx  DIM_filtradoH2O_MB_poligonos.dbf  DIM_filtradoH2O_MB_poligonos.sbn  DIM_filtradoH2O_MB_poligonos.sbx  DIM_filtradoH2O_MB_poligonos.shp.xml  DIM_filtradoH2O_MB_poligonos.shx  DIM_fragmentacion_TEM_celdas.dbf  DIM_fragmentacion_TEM_celdas.sbn  DIM_fragmentacion_TEM_celdas.sbx  DIM_fragmentacion_TEM_celdas.shp  DIM_fragmentacion_TEM_celdas.shp.xml  DIM_fragmentacion_TEM_celdas.shx  DIM_representacion_MB_celdas.dbf  DIM_representacion_MB_celdas.sbn  DIM_representacion_MB_celdas.sbx  DIM_representacion_MB_celdas.shp  DIM_representacion_MB_celdas.shp.xml  DIM_representacion_MB_celdas.shx
